force-app/main/default/objects/KS_Project__c/KS_Project__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold the project details</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>