force-app/main/default/objects/KS_Project__c/fields/KS_M2__c.field-meta.xml
<CustomField>
    <fullName>KS_M2__c</fullName>
    <description>The area of the project in square meters.</description>
    <label>m2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>