force-app/main/default/objects/KS_Project__c/fields/KS_Price__c.field-meta.xml
<CustomField>
    <fullName>KS_Price__c</fullName>
    <description>Custom field to hold the value of the project</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>