force-app/main/default/objects/KS_Project__c/fields/KS_PriceM2__c.field-meta.xml
<CustomField>
    <fullName>KS_PriceM2__c</fullName>
    <description>Custom field to capture the price / m2</description>
    <formula>KS_Price__c / KS_M2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price/m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>