force-app/main/default/objects/KS_Project__c/fields/KS_Region__c.field-meta.xml
<CustomField>
    <fullName>KS_Region__c</fullName>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>