force-app/main/default/objects/KS_Project__c/fields/KS_Title__c.field-meta.xml
<CustomField>
    <fullName>KS_Title__c</fullName>
    <description>Custom field to hold the title details of the project</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>