force-app/main/default/objects/KS_Project__c/fields/KS_TotalCommercialUnits__c.field-meta.xml
<CustomField>
    <fullName>KS_TotalCommercialUnits__c</fullName>
    <description>The total number of commercial units in this project.</description>
    <label>Total Commercial Units</label>
    <summaryFilterItems>
        <field>KS_Unit__c.KS_Type__c</field>
        <operation>equals</operation>
        <value>Commercial</value>
    </summaryFilterItems>
    <summaryForeignKey>KS_Unit__c.KS_Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>