force-app/main/default/objects/KS_Project__c/fields/KS_TotalUnitsPrice__c.field-meta.xml
<CustomField>
    <fullName>KS_TotalUnitsPrice__c</fullName>
    <description>Custom field to rollup (add) the prices of all related units</description>
    <label>Total Units Price</label>
    <summarizedField>KS_Unit__c.KS_Price__c</summarizedField>
    <summaryForeignKey>KS_Unit__c.KS_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>