force-app/main/default/objects/KS_Project__c/fields/Total_ApartmentUnits__c.field-meta.xml
<CustomField>
    <fullName>Total_ApartmentUnits__c</fullName>
    <description>Custom rollup field to count the total number of units type apartment</description>
    <label>Total Apartment Units</label>
    <summaryFilterItems>
        <field>KS_Unit__c.KS_Type__c</field>
        <operation>equals</operation>
        <value>Apartment</value>
    </summaryFilterItems>
    <summaryForeignKey>KS_Unit__c.KS_Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>